# hermes-token-screener

./: .dockerignore  .env.example  .gitignore  AUTORESEARCH_REPORT.md  CHANGELOG.md  CLOUDFLARE_SETUP.md  Caddyfile  Caddyfile.cloudflare  Dockerfile  LICENSE  LOCAL_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  RECOMMENDED_CHANNELS.md  TELEGRAM_CHANNELS.md  TELEGRAM_DMS.md  TOKEN_INTEGRATION_README.md  architecture.html  dashboard_data.json  debug_export.py  deploy-cloudflare.sh  deploy-data.sh  deploy.sh  detect_cycles.py  docker-compose.yml  hermes-token-screener-full-architecture.html  index.html  install.sh  nginx.conf  pyproject.toml  quickstart.sh  railway.json  render.yaml  requirements.txt  setup-cloudflare.sh  setup-duckdns.sh  setup.sh  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
agents/: delegation_router.py  registry.py
dashboard/: dex-prices.html
data/: active_positions.json  all_chains_dex_merged.json  base_dex_not_integrated.txt  bridge_network_map.txt  chains_by_gas_cost.txt  chains_by_vm.txt  combined_token_analysis.json  defi_protocol_registry.py  defillama_chains_by_mcap.txt  defillama_chains_filtered.txt  defillama_chains_rpc_providers.txt  defillama_verified_contracts.db  dex_integration_tiers.json  generate_wallets.py  keyword_discoveries.json  market_history.json  multi_chain_dashboard.json  multi_chain_prices.json  onchain_verified_pools.json  phase2_pool_discovery_report.json  phase3_report.json  pumpfun_dev_wallets.json  removed_chains_final.txt  rpc_test_results.txt  tokens.json  tokens_cosmos_polka_other.json  tokens_evm_major.json  top100.json  top100_phase1_initial.json  trade_decisions.json  trade_monitor_log.json  trending_keywords.json  twitter_accounts.json  twitter_token_analysis.json  wallets_phase4_final.json  zero_result_onchain_verification.json  zero_result_rpc_report.json
data/defillama_unified/: INTEGRATION_REPORT.md  defillama_unified.py  dex_factory_index.json  install.sh  unified_defi_infrastructure.json
data/dex_pools/: solana_dex_pools.json  solana_dex_pools_summary.json  (+21 more)
defillama-contracts/: CODEBASE.md  FINAL_SUMMARY.md  INTEGRATION_SUMMARY.md  PROTOCOL_CATALOG.md  PROTOCOL_CATALOG_SUMMARY.md  README.md  __init__.py  cli.py  fetch_base_dex_prices.py  fetch_base_dex_prices_v2.py  quickstart.py  requirements.txt  setup.py  test_base_dex.py
docs/: .nojekyll  bridge-contracts.html  bridge-matrix.html  columns.html  cross-tokens.html  cross-wallets.html  index.html  liquidity-management-system.md  smart-money-feed.html  smart-money-wallets.html  smart-money.html  style.css  tiered.html  wallets.html
examples/: integration.py  test_integration.py
hermes_screener/: __init__.py  __main__.py  async_enrichment.py  async_wallets.py  chart_sentiment.py  chart_sentiment_v2.py  cli.py  config.py  contract_db.py  dex.py  enhanced_scoring.py  entry_guards.py  execution_cost.py  keyword_discovery.py  logging.py  metrics.py  provider_reliability.py  regime.py  revised_scoring.py  security_intel.py  token_enricher.py  tor_config.py  utils.py  website_intelligence.py
integrations/perps-funding-arb-bot/: .gitignore  README.md  pyproject.toml
integrations/perps-funding-arb-bot/config/: bot.yaml
integrations/perps-funding-arb-bot/src/perps_arb/: __init__.py  accounting.py  cli.py  close_rebalance.py  config.py  credentials.py  engine.py  models.py  reconcile.py  risk.py  scanner.py  sizing.py  store.py
integrations/perps-funding-arb-bot/src/perps_arb/adapters/: __init__.py  base.py  ccxt_adapter.py
integrations/perps-funding-arb-bot/tests/: test_accounting.py  test_close_rebalance.py  test_credentials.py  test_engine.py  test_engine_hardening.py  test_engine_production_safety.py  test_reconcile.py  test_restart_recovery.py  test_risk.py  test_scanner.py  test_sizing.py  test_store_recovery.py
memory/: vector_store.py
models/: compression_pipeline.py  gemma4_loader.py
reports/: refactor-subagent-2-types.md  refactor-subagent-3-unused-code.md  refactor-subagent-4-circular-deps.md  refactor-subagent-5-strong-types.md  refactor-subagent-6-error-handling.md  refactor-subagent-7-legacy-cleanup.md  refactor-subagent-8-comment-quality.md
scripts/: README.md  abi_cache.json  address_extractor.py  ai_trading_brain.py  arbitrage_bot.py  base-dex-prices-v8.py  base-dex-prices-v9.py  base_dex_prices.py  bridge_paths_by_vm.txt  central_db_sink.py  chaingpt_wrapper.py  coingecko_enricher.py  combined_token_analysis.py  contract_executor.py  copytrade_monitor.py  cross_scoring.py  db_maintenance.py  defi_enricher.py  defi_protocol_registry.py  defi_protocol_registry_filtered.py  defillama-cli.py  defillama_chains.txt  defillama_chains_by_gas_cost.txt  defillama_chains_by_protocols.txt  defillama_chains_no_rpc.txt  defillama_chains_rpc_status.txt  defillama_chains_rpc_status_final.txt  defillama_chains_with_rpc.txt  defillama_full_registry.json  derived_security.py  dex_aggregator_trader.py  dexscreener_discovery.py  dexscreener_enricher.py  enhanced_cross_scoring.py  enhanced_scoring.py  enhanced_token_discovery.py  etherscan_enricher.py  evm_chains_missing_rpc.txt  export_github_pages.py  gmgn_enricher_v2.py  (+64 more)
tests/: test_async.py  test_config.py  test_dashboard.py  test_integration.py  test_liquidity_daemon.py  test_liquidity_manager.py  test_logging.py  test_metrics.py  test_portfolio_registry.py  test_price_oracle.py  test_protocol_liquidity_executor.py
tools/: dspy_optimizer.py
worker/: Dockerfile  README.md  app.py  requirements.txt  worker_client.py
(+151 files in other folders)
