[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-token-screener"
version = "9.0.0"
description = "Multi-source token screening pipeline with 12-layer enrichment and smart money wallet tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TerexitariusStomp" },
]
keywords = ["defi", "token", "screener", "crypto", "solana", "evm", "smart-money"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "requests>=2.28",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "rich>=13.0",
]

[project.optional-dependencies]
telegram = ["telethon>=1.30"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]
all = ["hermes-token-screener[telegram,dashboard,dev]"]

[project.urls]
Homepage = "https://github.com/TerexitariusStomp/hermes-token-screener"
Repository = "https://github.com/TerexitariusStomp/hermes-token-screener"

[project.scripts]
hermes-screener = "hermes_screener.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["hermes_screener"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
