[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perps-funding-arb-bot"
version = "0.1.0"
description = "Funding-rate arbitrage bot for perpetual futures"
requires-python = ">=3.10"
dependencies = [
 "ccxt>=4.4.0",
 "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
 "pytest>=8.0.0",
 "ruff>=0.6.0",
]

[project.scripts]
perps-arb = "perps_arb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
